# langchain-rust

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  README_zh.md  RELEASE.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE_OPTIMIZATION_SUMMARY.md  ARC_MUTEX_OPTIMIZATION.md  ASYNC_OPTIMIZATION.md
examples/: advanced_tools.rs  agent.rs  configurable_model.rs  context_engineering_complete.rs  context_engineering_dynamic_prompt.rs  context_engineering_dynamic_tools.rs  context_engineering_message_injection.rs  conversational_chain.rs  conversational_retriever_chain_with_vector_store.rs  conversational_retriever_simple_chain.rs  create_agent_simple.rs  deep_agent_basic.rs  deep_agent_customization.rs  deep_agent_filesystem.rs  deep_agent_human_in_the_loop.rs  deep_agent_long_term_memory.rs  deep_agent_planning.rs  deep_agent_skills.rs  deep_agent_with_task.rs  dynamic_semantic_routes.rs  embedding_azure_open_ai.rs  embedding_fastembed.rs  embedding_mistralai.rs  embedding_ollama.rs  embedding_openai.rs  git_commits.rs  guardrails_combined.rs  guardrails_custom.rs  guardrails_pii.rs  init_chat_model.rs  invocation_config.rs  langgraph_agent_workflow.rs  langgraph_hello_world.rs  langgraph_interrupts.rs  langgraph_interrupts_approval.rs  langgraph_interrupts_review.rs  langgraph_memory_basic.rs  langgraph_memory_store.rs  langgraph_parallel_execution.rs  langgraph_persistence_basic.rs  (+70 more)
examples/skills/langgraph-docs/: SKILL.md
examples/vector_store_surrealdb/: Cargo.toml
examples/vector_store_surrealdb/src/: main.rs
scripts/: run-pgvector
src/: lib.rs
src/agent/: checkpoint.rs  executor.rs  hitl.rs  message_repair.rs  mod.rs  model_detector.rs  state.rs  structured_output.rs  unified_agent.rs
src/agent/chat/: chat_agent.rs  output_parser.rs
src/agent/context_engineering/: mod.rs  model_request.rs
src/agent/deep_agent/: config.rs  mod.rs  skills.rs
src/agent/middleware/: chain.rs  content_filter.rs  guardrail_utils.rs  human_in_loop.rs  logging.rs  mod.rs  pii.rs  pii_detector.rs  rate_limit.rs  retry.rs  safety_guardrail.rs  skill_injection.rs  summarization.rs  tool_result_eviction.rs
src/agent/multi_agent/: mod.rs
src/agent/runtime/: dynamic_prompt.rs  mod.rs  runtime_request.rs  typed_context.rs
src/chain/: error.rs  mod.rs  options.rs
src/chain/conversational_retrieval_qa/: conversational_retrieval_qa.rs
src/document_loaders/: error.rs  mod.rs
src/document_loaders/cloud_loaders/: aws_s3_loader.rs  mod.rs
src/document_loaders/common_file_loaders/: json_loader.rs  markdown_loader.rs  mod.rs  toml_loader.rs  tsv_loader.rs  xml_loader.rs  yaml_loader.rs
src/document_loaders/git_commit_loader/: git_commit_loader.rs
src/document_loaders/office_loaders/: excel_loader.rs  mod.rs
src/document_loaders/productivity_loaders/: github_loader.rs  mod.rs
src/document_loaders/source_code_loader/: language_parsers.rs
src/document_loaders/web_loaders/: mod.rs  recursive_url_loader.rs  sitemap_loader.rs  web_base_loader.rs
src/error/: chain.rs  lib.rs  llm.rs  mod.rs  retriever.rs  utils.rs
src/langgraph/: compiled.rs  edge.rs  error.rs  graph.rs  mod.rs  node.rs  state.rs
src/langgraph/execution/: durability.rs  mod.rs  parallel.rs  scheduler.rs  superstep.rs
src/langgraph/interrupts/: command.rs  context.rs  error.rs  mod.rs  result.rs  state_or_command.rs  tests.rs  types.rs
src/langgraph/node/: subgraph.rs  tests_subgraph.rs
src/langgraph/persistence/: checkpointer.rs  config.rs  error.rs  memory.rs  mod.rs  serde.rs  snapshot.rs  sqlite.rs  store.rs  tests.rs  tests_memory.rs
src/langgraph/streaming/: chunk.rs  metadata.rs  mod.rs  mode.rs  tests.rs  writer.rs
src/langgraph/task/: cache.rs  decorator.rs  mod.rs  task.rs
src/language_models/: common_config.rs  configurable.rs  error.rs  init.rs  invocation_config.rs  llm.rs  mod.rs  model_parser.rs  options.rs  usage.rs
src/llm/: mod.rs
src/llm/bedrock/: client.rs  error.rs  mod.rs  models.rs
src/llm/claude/: client.rs
src/llm/gemini/: client.rs  error.rs  mod.rs  models.rs
src/llm/huggingface/: client.rs  error.rs  mod.rs  models.rs
src/llm/mistralai/: client.rs  error.rs  mod.rs  models.rs
src/llm/ollama/: client.rs  mod.rs
src/llm/openai/: mod.rs
src/llm/qwen/: client.rs
src/prompt/: chat.rs
src/rag/: mod.rs
src/rag/agentic/: agentic_rag.rs  mod.rs  retriever_tool.rs
src/rag/hybrid/: answer_validator.rs  hybrid_rag.rs  mod.rs  query_enhancer.rs  retrieval_validator.rs
src/rag/two_step/: builder.rs  mod.rs  two_step_rag.rs
src/retrievers/: error.rs  mod.rs
src/retrievers/algorithm/: bm25_retriever.rs  mod.rs  svm_retriever.rs  tfidf_retriever.rs
src/retrievers/compression/: embeddings_redundant_filter.rs  llm_lingua_compressor.rs  mod.rs
src/retrievers/hybrid/: ensemble_retriever.rs  merger_retriever.rs  mod.rs
src/retrievers/query_enhancement/: mod.rs  multi_query_retriever.rs  rephrase_query_retriever.rs
src/retrievers/reranker/: cohere_reranker.rs  contextual_ai_reranker.rs  flashrank_reranker.rs  mod.rs
src/schemas/: mod.rs  retrievers.rs  stream.rs  structured_output.rs  tools_openai_like.rs
src/semantic_router/: utils.rs
src/text_splitter/: character_splitter.rs  code_splitter.rs  error.rs  html_splitter.rs  json_splitter.rs  mod.rs  options.rs  plain_text_splitter.rs  recursive_character_splitter.rs
src/tools/: context.rs  error.rs  file_backend.rs  mod.rs  runtime.rs  schema.rs  store.rs  stream.rs  tool.rs
src/tools/browser_use/: browser_use.rs  mod.rs
src/tools/command_executor/: command_executor.rs
src/tools/duckduckgo/: duckduckgo_search.rs
src/tools/long_term_memory/: enhanced_store.rs  filter.rs  mod.rs  store_value.rs
src/tools/scraper/: scraper.rs
src/tools/sequential_thinking/: mod.rs  sequential_thinking.rs
src/tools/serpapi/: serpapi.rs
src/tools/wolfram/: wolfram.rs
src/utils/: async_utils.rs  builder.rs  mod.rs  similarity.rs  vectors.rs
src/vectorstore/: base.rs  error.rs  mod.rs  vectorstore.rs
src/vectorstore/chroma/: builder.rs  chroma.rs  mod.rs
tests/: architecture.rs
(+59 files in other folders)
